--- a/package.json
+++ b/package.json
@@ -707,6 +707,7 @@
     "tslint": "^6.1.3",
     "typescript": "^3.9.7",
     "typescript-tslint-plugin": "^1.0.2",
+    "vscode": "^1.1.37",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.7.0",
     "yargs-parser": "^20.2.4"
